# kiek

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  kiek_tool.py  schema.json
.agent/rules/: runnings-tests.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  close-failed-dependabot-prs.yml  copyright.yml  main.yml  release.yml  release_pr.yml
.github/workflows/files/: developerID_application.cer  kiek.rb
docs/: development.md  release.md  roadmap.md
src/: app.rs  args.rs  aws.rs  context.rs  error.rs  exception.rs  feedback.rs  glue.rs  highlight.rs  kafka.rs  lib.rs  main.rs  msk_iam_context.rs  payload.rs  schema_registry.rs
tests/: errors.rs  list-topics.rs  read-partition.rs
