[package]
name = "kiek"
version = "1.6.0"
edition = "2021"

[dependencies]
# Generic
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
log = "0.4.29"
simple_logger = "5.0.0"
serde = "1.0.228"
chrono = "0.4.43"
regex = "1.12.2"
openssl = { version = "0.10.75", features = ["vendored"] } # vendored required for codesigning
reqwest = { version = "0.13.1", default-features = false, features = ["rustls"] }

# AWS
aws-types = "1.3.11"
aws-runtime = "1.5.18"
aws-config = { version = "1.8.12", features = ["rustls"] }
aws-sdk-sts = { version = "1.96.0", features = ["rustls"] }
aws-sdk-glue = { version = "1.134.0", features = ["rustls"] }

# Specific application
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
rdkafka = { version = "0.38.0", features = ["default", "ssl", "zstd"] }
aws-msk-iam-sasl-signer = "1.0.0"
uuid = { version = "1.19.0", features = ["v4"] }
apache-avro = "0.21.0"
serde_json = "1.0.149"
murmur2 = "0.1.0"
levenshtein = "1.0.5"
dialoguer = "0.12.0"
reachable = { version = "0.2.3", features = ["default"] }
aws-credential-types = "1.2.11"
termion = "4.0.6"
bigdecimal = "0.4.10"
flate2 = "1.1.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
assertables = "9.8.4"

[profile.release]
strip = true # Omit debug symbols for panics in favor of smaller binary
opt-level = "z" # Optimize for size: Kafka will be the bottleneck, not CPU
panic = "abort" # Don't rewind the stack on panic to reduce binary size
codegen-units = 1 # Reduce binary size by compiling all code in one unit
lto = "fat" # Enable best link-time optimization to reduce binary size
